[tool.poetry]
name = "push-latency-tests"
version = "0.1.0"
description = ""
authors = ["Nathan Alderson <me@nathanalderson.com>"]
readme = "README.md"
packages = [{ include = "push_latency_tests" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
h2 = "^4.1.0"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = 'push_latency_tests.main:main'
